# AQ3DC

./: CMakeLists.txt  README.md
AQ3DC/: AQ3DC.py
AQ3DC/Resources/UI/: AQ3DC.ui
